--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Base View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="COBaseViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="COLRBaseViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
